# life_OS

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  MIGRATION.md  Makefile  README.md  SKILL.md  pyproject.toml  user-patterns.example.md
.github/workflows/: _bash-ci.sh  integration.yml  test.yml
_meta/cortex/: salience-tuning.md
docs/: index.md  installation.md  second-brain.md  token-estimation.md
docs/architecture/: 16-agents.md  cognitive-pipeline.md  execution-layer.md  hard-rules-catalog.md  hermes-local.md  information-isolation.md  markdown-first.md  mcp-server.md  multi-platform-orchestration.md  orchestration-protocol.md  prompt-cache-strategy.md  roadmap.md  security-boundaries.md  system-overview.md  v1.7-spec-map.md  workflow-state-machine.md
docs/evals/: overview.md  running-evals.md  writing-new-scenarios.md
docs/getting-started/: choose-your-platform.md  first-session.md  quickstart.md  what-is-life-os.md
docs/guides/: annual-planning-session.md  building-your-wiki.md  career-decision-playbook.md  daily-workflow.md  mapping-your-strategy.md  multi-platform-setup.md  setting-up-your-soul.md  using-the-strategist.md  v1.7-migration.md  your-first-decision.md
docs/reference/: faq.md  token-estimation.md  trigger-words.md  version-history.md
docs/user-guide/: index.md  updates.md
evals/: README.md  run-eval.sh  run-tool-eval.sh
evals/rubrics/: agent-output-quality.md  orchestrator-compliance.md
evals/scenarios/: adjourn-compliance.md  chengxiang-triage.md  cortex-retrieval.md  council-debate.md  fengbo-loop.md  large-purchase.md  native-subagent-registration.md  relationship.md  resign-startup.md  router-triage.md  start-session-compliance.md  tool-backup.md  tool-daily_briefing.md  tool-embed.md  tool-export.md  tool-migrate.md  tool-reconcile.md  tool-reindex.md  tool-research.md  tool-search.md  tool-seed.md  tool-stats.md  tool-sync_notion.md  zhengshitang-debate.md
i18n/es/: README.md
i18n/ja/: CHANGELOG.md  SKILL.md  (+2 more)
pro/: AGENTS.md  CLAUDE.md  GEMINI.md  GLOBAL.md
references/: adapter-gdrive.md  adapter-github.md  adapter-notion.md  audit-trail-spec.md  automation-spec.md  comparison-spec.md  compliance-spec.md  concept-spec.md  cortex-architecture.md  cortex-spec.md  data-layer.md  data-model.md  departments.md  domains.md  dream-spec.md  eval-history-spec.md  gwt-spec.md  hard-rules-index.md  hippocampus-spec.md  hooks-spec.md  method-library-spec.md  narrator-spec.md  notion-schema.md  obsidian-spec.md  obsidian-style.md  people-spec.md  review-queue-spec.md  scene-configs.md  session-index-spec.md  session-modes-spec.md  snapshot-spec.md  soul-spec.md  strategic-map-spec.md  tools-spec.md  v1.7-shipping-report-2026-04-21.md  wiki-spec.md
scripts/: archiver-briefing-skeleton.sh  archiver-phase-prefetch.sh  check-spec-drift.sh  lifeos-compliance-check.sh  lifeos-pre-prompt-guard.sh  lifeos-version-check.sh  notion-sync.sh  register-claude-agents.sh  retrospective-briefing-skeleton.sh  retrospective-mode-0.sh  run-cron-now.sh  setup-cron.sh  setup-hooks.sh  unregister-claude-agents.sh  verify-release.sh
tests/: __init__.py  test_backup.py  test_cli.py  test_compliance_check.py  test_concept_and_snapshot.py  test_daily_briefing.py  test_embed.py  test_export.py  test_extraction.py  test_integration.py  test_migrate.py  test_package_imports.py  test_reconcile.py  test_reindex.py  test_research.py  test_search.py  test_second_brain.py  test_seed.py  test_seed_concepts.py  test_session_index.py  test_stats.py  test_stats_extend.py  test_sync_notion.py
themes/: en-csuite.md  en-roman.md  en-usgov.md  ja-corp.md  ja-kasumigaseki.md  ja-meiji.md  zh-classical.md  zh-corp.md  zh-gov.md
tools/: README.md  __init__.py  approval.py  backup.py  cli.py  context_compressor.py  cron_health_report.py  daily_briefing.py  embed.py  export.py  extract.py  manual_compression_feedback.py  mcp_server.py  memory.py  migrate.py  missed_cron_check.py  prompt_cache.py  rebuild_concept_index.py  rebuild_session_index.py  reconcile.py  reindex.py  research.py  search.py  seed.py  seed_concepts.py  session_search.py  skill_manager.py  spec_compliance_report.py  stats.py  sync_notion.py  wiki_decay.py
(+359 files in other folders)
